--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
 
-  "name": "Chrome Extension TypeScript Starter",
-  "description": "Chrome Extension, TypeScript, Visual Studio Code",
-  "version": "1.0",
+  "name": "hantranslate.ai",
+  "description": "Markup-safe, lightweight, fast AI Translator extension powered by Chrome's built-in AI.",
+  "version": "0.1.0",
 
   "options_ui": {
     "page": "options.html"
