chore: packageManager 필드 추가

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hantranslate.ai",
   "version": "0.1.0",
+  "packageManager": "pnpm@10.23.0",
   "description": "Markup-safe, lightweight, fast AI Translator extension powered by Chrome’s built-in AI.",
   "main": "index.js",
   "scripts": {
