--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
 
-  "name": "hantranslate.ai",
-  "description": "Markup-safe, lightweight, fast AI Translator extension powered by Chrome's built-in AI.",
-  "version": "0.1.0",
+  "name": "HanTranslate.ai",
+  "description": "Chrome Built-in AI를 활용한 한국어 번역 익스텐션",
+  "version": "1.0.0",
 
   "options_ui": {
     "page": "options.html"
@@ -15,10 +15,10 @@
   },
 
   "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["js/vendor.js", "js/content_script.js"]
-      }
+    {
+      "matches": ["<all_urls>"],
+      "js": ["js/vendor.js", "js/content_script.js"]
+    }
   ],
 
   "background": {
@@ -26,7 +26,8 @@
   },
 
   "permissions": [
-    "storage"
+    "storage",
+    "activeTab"
   ],
 
   "host_permissions": [
