--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@types/chrome": "0.1.29",
+    "@types/dom-chromium-ai": "^0.0.11",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
